[package]
name = "houdini-license-chaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
ctrlc = "3.4.1"
iced = { git = "https://github.com/iced-rs/iced.git", rev="7dd32f3", features = ["tokio", "image"] }
dirs = "5.0.1"

[dependencies.tokio]
version = "1.33.0"
features = ["process"]

[dependencies.image]
version = "0.24.7"
features = ["png"]

[profile.release]
strip = true
